添加写博客功能并实现修改和删除

--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -52,6 +52,6 @@
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
-
-        </form>
+      </form>
+    </div>
 {% endblock content %}
