--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -10,10 +10,10 @@
 
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
-  <link rel="shortcut icon" type="text/css" href="{{ url_for('static', filename='favicon.ico') }}"
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}"
         type="image/x-icon">
 
-  <link rel="sicon" href="{{ url_for('static', filename='favicon.ico') }}"
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}"
         type="image/x-icon">
 
   {% if title %}
