使用蓝本模块化程序

--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -1,19 +1,19 @@
 {% extends "layout.html" %}
 {% block content %}
   <article class="media content-section">
-    <a href="{{ url_for('user_posts', username=post.author.username) }}">
+    <a href="{{ url_for('users.user_posts', username=post.author.username) }}">
       <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
     </a>
     <div class="media-body">
       <div class="article-metadata">
-        <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
+        <a class="mr-2" href="{{ url_for('users.user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
         <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
       </div>
       <h2><a class="article-title">{{ post.title }}</a></h2>
       <p class="article-content">{{ post.content }}</p>
       {% if current_user == post.author %}
         <dir>
-          <a class="btn btn-primary btn-sm" href="{{ url_for('update_post', post_id=post.id) }}" role="button">Update</a>
+          <a class="btn btn-primary btn-sm" href="{{ url_for('posts.update_post', post_id=post.id) }}" role="button">Update</a>
           <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#exampleModal">
             Delete
           </button>
@@ -34,7 +34,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+          <form action="{{ url_for('posts.delete_post', post_id=post.id) }}" method="POST">
             <input class="btn btn-danger" type="submit" value="Delete">
           </form>
         </div>
